[package]
name = "littlefs2-pack"
description = "A Rust crate for packing a file system into a LittleFS binary file to be flashed to an embedded device"
version = "0.2.1"
edition = "2024"
authors = ["Xander Cesari <xander@merriman.industries>"]
repository = "https://github.com/MerrimanInd/littlefs2-tool/littlefs2-pack"
documentation = "https://docs.rs/littlefs2_pack"
categories = ["embedded", "filesystem"]
license = "MIT"

[dependencies]
littlefs2-core = "0.1.2"
littlefs2-sys = { version = "0.3.1", features = ["multiversion"] }
thiserror = "2.0.18"
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"
ignore = "0.4.25"


[dev-dependencies]
tempfile = "3"
