[package]
edition = "2024"
name = "esp32-littlefs-server"
rust-version = "1.93"
version = "0.1.0"

[[bin]]
name = "esp32-littlefs-server"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = [
  "defmt",
  "esp32s3",
  "unstable",
  "psram",
] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

embassy-net = { version = "0.9", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt", "esp32s3"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"
picoserve = { version = "0.18", features = ["embassy"] }
littlefs2 = { version = "0.7.0", features = ["c-stubs"] }
generic-array = "1.3.5"
esp-storage = { version = "0.8.1", features = ["esp32s3"] }
embedded-storage = "0.3.1"

[patch.crates-io]
esp-rom-sys = { git = "https://github.com/esp-rs/esp-hal", branch = "main", package = "esp-rom-sys" }

[build-dependencies]
littlefs2-pack = { path = "../../littlefs2-pack" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
